GNOME Bugzilla – Bug 772611
Large memory leak in tracker-extract-libav
Last modified: 2016-10-09 09:48:16 UTC
Created attachment 337236 [details] [review] Patch to fix tracker-extract-libav.c uses avformat_open_input to initialize the libav AVFormatContext. This should be closed with avformat_close_input, but avformat_free_context is used instead which is intended for closing output contexts, not inputs. A large amount of memory is leaked by tracker-extract here when it processes video files. We were seeing 300MB VmRSS after a tracker reset. This patch reduces that dramatically, though there's still room for improvement.
Created attachment 337257 [details] [review] Git patch fix
Thanks so much for the patch! It is now in master.