Fix tracker-extract-libav memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=772611