src/tracker-extract/tracker-extract-libav.c
@@ -77,7 +77,7 @@ tracker_extract_get_metadata (TrackerExtractInfo *info)
 	}
 
 	if (!audio_stream && !video_stream) {
-		avformat_free_context (format);
+		avformat_close_input (&format);
 		g_free (uri);
 		return FALSE;
 	}
@@ -278,7 +278,7 @@ tracker_extract_get_metadata (TrackerExtractInfo *info)
 
 	g_free (uri);
 
-	avformat_free_context (format);
+	avformat_close_input (&format);
 
 	tracker_extract_info_set_resource (info, metadata);
 	g_object_unref (metadata);
